# InvArch-Frames

./: Cargo.toml  README.md  crates.js  help.html  index.html  rust-toolchain.toml  search-index.js  settings.html  src-files.js
INV4/pallet-inv4/: Cargo.toml
INV4/pallet-ipf/: Cargo.toml
INV4/pallet-ipl/: Cargo.toml
INV4/pallet-ips/: Cargo.toml
INV4/pallet-ipt/: Cargo.toml
INV4/pallet-ipvm/: Cargo.toml
OCIF/ip-donations/: Cargo.toml
OCIF/ip-donations/src/: lib.rs  mock.rs
OCIF/staking/: Cargo.toml
invarch_primitives/: all.html  enum.BoolOrWasm.html  enum.IpsType.html  enum.OneOrPercent.html  enum.Parentage.html  index.html  sidebar-items.js  struct.CallInfo.html  struct.CoreInfo.html  struct.IpfInfo.html  struct.SubTokenInfo.html
ipt/src/: lib.rs
pallet-checked-inflation/: Cargo.toml
pallet-checked-inflation/src/: lib.rs
pallet-core-assets/: Cargo.toml  README.md
pallet-core-assets/src/: lib.rs
pallet-nft-origins/: Cargo.toml
pallet-nft-origins/src/: chains.rs  lib.rs  location.rs  origin.rs  xcm_converters.rs
pallet-rings/: Cargo.toml
pallet-rings/src/: lib.rs
pallet-rules/: Cargo.toml
pallet-rules/src/: lib.rs  macros.rs  traits.rs
pallet_checked_inflation/: all.html  enum.InflationMethod.html  index.html  sidebar-items.js  trait.GetInflation.html
pallet_checked_inflation/inflation/: enum.InflationMethod.html  index.html  sidebar-items.js  trait.GetInflation.html
pallet_checked_inflation/pallet/: enum.Call.html  enum.Error.html  enum.Event.html  index.html  sidebar-items.js  struct.Pallet.html  trait.Config.html  type.BalanceOf.html  type.CurrentEra.html  type.Halted.html  type.Module.html  type.NegativeImbalanceOf.html  type.NextEraStartingBlock.html  type.YearStartIssuance.html  type.YearlyInflationPerEra.html
pallet_checked_inflation/weights/: index.html  struct.SubstrateWeight.html  trait.WeightInfo.html
pallet_inv4/: all.html  index.html  sidebar-items.js  struct.INV4Lookup.html
pallet_inv4/account_derivation/: index.html  sidebar-items.js  trait.CoreAccountDerivation.html
pallet_inv4/dispatch/: fn.dispatch_call.html  index.html  sidebar-items.js
pallet_inv4/fee_handling/: enum.FeeAsset.html  enum.FeeAssetNegativeImbalance.html  index.html  sidebar-items.js  trait.MultisigFeeHandler.html
pallet_inv4/inv4_core/: index.html  sidebar-items.js  type.CoreIndexOf.html  type.CoreMetadataOf.html
pallet_inv4/lookup/: index.html  sidebar-items.js  struct.INV4Lookup.html
pallet_inv4/multisig/: constant.MAX_SIZE.html  index.html  sidebar-items.js  struct.MultisigOperation.html  type.BoundedCallBytes.html  type.MultisigOperationOf.html
pallet_inv4/origin/: enum.INV4Origin.html  fn.ensure_multisig.html  index.html  sidebar-items.js  struct.MultisigInternalOrigin.html
pallet_inv4/pallet/: constant.STORAGE_VERSION.html  enum.Call.html  enum.Error.html  enum.Event.html  index.html  sidebar-items.js  struct.Pallet.html  trait.Config.html  type.BalanceOf.html  type.CallOf.html  type.CoreByAccount.html  type.CoreInfoOf.html  type.CoreMembers.html  type.CoreStorage.html  type.Module.html  type.Multisig.html  type.NextCoreId.html  type.Origin.html
pallet_inv4/voting/: enum.Vote.html  index.html  sidebar-items.js  struct.Tally.html  trait.CustomPolling.html  type.Core.html  type.VoteRecord.html  type.Votes.html
pallet_inv4/weights/: index.html  struct.SubstrateWeight.html  trait.WeightInfo.html
pallet_ocif_staking/: all.html  constant.LOCK_ID.html  index.html  sidebar-items.js  type.MessageOriginOf.html
pallet_ocif_staking/pallet/: enum.Call.html  enum.Error.html  enum.Event.html  index.html  sidebar-items.js  struct.Pallet.html  trait.Config.html  type.BalanceOf.html  type.CoreEraStake.html  type.CoreInfoOf.html  type.CoreMetadataOf.html  type.CurrentEra.html  type.Era.html  type.GeneralEraInfo.html  type.GeneralStakerInfo.html  type.Halted.html  type.Ledger.html  type.Module.html  type.NegativeImbalanceOf.html  type.NextEraStartingBlock.html  type.RegisteredCore.html  type.RewardAccumulator.html  type.UnregisteredCoreStakeInfo.html  type.UnregisteredCoreStakers.html
pallet_ocif_staking/primitives/: constant.MAX_ASSUMED_VEC_LEN.html  enum.CustomAggregateMessageOrigin.html  index.html  sidebar-items.js  struct.AccountLedger.html  struct.CoreInfo.html  struct.CoreMetadata.html  struct.CoreStakeInfo.html  struct.CustomMessageProcessor.html  struct.CustomNarrowOriginToSibling.html  struct.CustomParaIdToSibling.html  struct.EraInfo.html  struct.EraStake.html  struct.RewardInfo.html  struct.StakerInfo.html  struct.UnbondingInfo.html  struct.UnlockingChunk.html  struct.UnregisterMessage.html  type.BalanceOf.html
pallet_ocif_staking/weights/: index.html  struct.SubstrateWeight.html  trait.WeightInfo.html
pallet_rings/: all.html  index.html  sidebar-items.js  trait.ChainAssetsList.html  trait.ChainList.html
pallet_rings/pallet/: enum.Call.html  enum.Error.html  enum.Event.html  fn.mutate_if_relay.html  index.html  sidebar-items.js  struct.Pallet.html  trait.Config.html  type.ChainsUnderMaintenance.html  type.Module.html
pallet_rings/traits/: index.html  sidebar-items.js  trait.ChainAssetsList.html  trait.ChainList.html
pallet_rings/weights/: index.html  struct.SubstrateWeight.html  trait.WeightInfo.html
primitives/: Cargo.toml
primitives/src/: lib.rs
search.desc/invarch_primitives/: invarch_primitives-desc-0-.js
search.desc/pallet_checked_inflation/: pallet_checked_inflation-desc-0-.js
search.desc/pallet_inv4/: pallet_inv4-desc-0-.js
search.desc/pallet_ocif_staking/: pallet_ocif_staking-desc-0-.js
search.desc/pallet_rings/: pallet_rings-desc-0-.js
src/invarch_primitives/: lib.rs.html
src/pallet_checked_inflation/: inflation.rs.html  lib.rs.html  weights.rs.html
src/pallet_inv4/: account_derivation.rs.html  dispatch.rs.html  fee_handling.rs.html  inv4_core.rs.html  lib.rs.html  lookup.rs.html  multisig.rs.html  origin.rs.html  voting.rs.html  weights.rs.html
src/pallet_ocif_staking/: lib.rs.html  (+2 more)
transaction-payment-flexible/: Cargo.toml
transaction-payment-flexible/src/: lib.rs  traits.rs
(+168 files in other folders)
