[package]
name = 'pallet-ip-donations'
authors = ['InvArchitects <https://github.com/InvArch>']
description = 'FRAME pallet to IP donations'
edition = '2018'
homepage = 'https://invarch.network'
license = 'GPLv3'
repository = 'https://github.com/InvArch/InvArch-Pallet-Library/'
version = '0.1.0-dev'

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18", default-features = false }

[features]
default = ["std"]
std = [
  "sp-runtime/std",
  "frame-support/std"
]
try-runtime = ["frame-support/try-runtime"]